--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -49,11 +49,15 @@
 
 .heroCard {
   @apply relative block rounded-lg shadow-lg px-6 pt-12 pb-6 md:px-12 lg:-mr-14;
-  background: hsla(0, 0%, 100%, 0.55);
-  backdrop-filter: blur(30px);
+  background: hsla(0, 0%, 100%, 0.75);
+  backdrop-filter: blur(50px);
   z-index: 1;
 }
 
+.heroBackground {
+  background: url("/assets/background.png");
+  background-size: cover;
+}
 // .heroTitle {
 //   padding: 26px 47px;
 //   border: 9px solid #000000;
