--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,8 +6,26 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Atma:wght@700&display=swap');
+@layer base {
+  body {
+    @apply text-base;
+  }
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-2xl mb-2;
+    font-family: 'Bebas Neue';
+  }
+  h3 {
+  }
+  p {
+    @apply mt-4
+  }
+}
